Fix the scaling units to make better sense.
The scaling units were set somewhat early in development to a base of
0.8em, which was a bit on the small size. The `m` (medium) size was
almost always too small, requiring use of the in-between `ml`
(medium-large) size. Similarly, `l` (large) was never large enough,
requiring `xl` or `xl` sizes. And those were still on the small size,
given their upper range on the scale.

The scale has now been redone to use `1em` as the base, and to change
the `l`, `xl`, and `xxl` scales to better represent their names. This
gives us a slightly larger UI by default when using these units, which
works better on both touchscreens and modern desktop displays.

Mostly, this doesn't impact things too much until you get to the `ml`
size and higher. Any UI components making use of these will need updates
to choose more correct sizes.

Ink itself isn't really impacted much by these changes. Alerts required
small changes to the layout to reduce the distance to actions.

Testing Done:
Tested this with all the Ink components, and with Review Board (which
does require updates).

Reviewed at https://reviews.reviewboard.org/r/13827/

--- a/src/ink/less/themes/default/components/alert.theme.less
+++ b/src/ink/less/themes/default/components/alert.theme.less
@@ -71,7 +71,7 @@
        * Styles for the actions area.
        */
       @actions: {
-        margin-top: var(--ink-u-spacing-xl);
+        margin-top: var(--ink-u-spacing-l);
         gap: var(--ink-u-spacing-std);
       };
 
