--- a/src/ink/less/themes/default/units.less
+++ b/src/ink/less/themes/default/units.less
@@ -95,16 +95,16 @@
   .spacing() {
     #ink-ns-theme.add-unit-scale-vars(
       @prefix: ink-u-spacing;
-      @base-scale: 0.8em;
+      @base-scale: 1em;
       @scales: {
         xs: 0.25;
         s: 0.5;
         sm: 0.75;
         m: 1;
-        ml: 1.25;
-        l: 1.5;
-        xl: 2;
-        xxl: 3;
+        ml: 1.5;
+        l: 2;
+        xl: 3;
+        xxl: 4;
       });
 
     --ink-u-spacing-std: var(--ink-u-spacing-m);
